Edited the Suzie's Story text and tried to fix the white space underneath header

--- a/ranaSoyak-assignment01/styles/sass/styles.scss
+++ b/ranaSoyak-assignment01/styles/sass/styles.scss
@@ -39,12 +39,9 @@ body {
 // Navigation Styling
 header {
     // the background image size + header size was assumed based on max-1500px screen.
-    // background-image: url(../styles/animal-land-assets/image-1.jpg);
-    // height: 70vh;
-    // width: 100vw; 
-    // background-size: cover;
-    // background-position: center bottom;
     position: relative;
+    margin: 0;
+    padding: 0;
     .tigerImage{
         width: 100%;
     }
@@ -75,7 +72,7 @@ header {
             height: 150px;
             position: absolute;
             right: 30%;
-            top: -5%;
+            top: 5%;
                 h1 {
                     text-transform: capitalize;
                     font-family: $mainFontFam;
@@ -109,10 +106,11 @@ header {
 // Section 2 - Suzie's Story 
 .suzieStory{
     padding: 75px 0;
+    margin: 0;
     background-color: $mainBackgroundColor;
           .wrapper{
-            justify-content: space-between;
-            align-items: center;
+            // justify-content: space-between;
+            // align-items: center;
         }
         
         .suzieImg{
@@ -127,14 +125,17 @@ header {
         .suzieContent {
             width: 70%;
             min-width: 400px;
+            padding-left: 2%;
             h2 {
                 font-size: $h2Size;
                 font-family: $mainFontFam;
                 text-transform: uppercase;
+                margin-top: 0;
             }
             p{
                 font-family: $thirdFontFam;
                 font-size: $paragraphSize;
+                margin-top: 0;
             }
 
             button {
